2004-03-01  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/exif-mnote-data-pentax.c: Fixed flipped inequation
	  causing all value requests to be denied as invalid

2004-02-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-loader.c: propper skipping of JPEG_MARKER_COM when
	  searching for JPEG_MARKER_APP1 with exif data

2004-01-19  Lutz Mueller <lutz@users.sourceforge.net>

	* contrib/c++: Files contributed by Hans Meine <hans_meine@gmx.net>.
	  Completely untested.

2004-01-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_get_value_brief): merge into
	  (exif_entry_get_value) and remove.
	* tests/test-mnote.c: Make it compile again.
	* tests/test-value.c: New.
	* configure.in: API-changes -> increment version.

2004-01-07  Jan Patera <patera@users.sourceforge.net>

	Thread-safety, elimination of static variables, fixes of memory
	corruption (writing beyond provided space), no more memory leaks
	in mnote, 2 new args of exif_entry_get_value,
	exif_entry_get_value_brief, exif_mnote_data_get_value.

	* libexif, libexif/canon, libexif/olympus, libexif/pentax

2003-12-09  Lutz Mueller <lutz@users.sourceforge.net>

	A couple of fixes by Jan Patera <patera@pictview.com>:

	* libexif

2003-12-08  Lutz Mueller <lutz@users.sourceforge.net>

	Suggestion by Jan Patera <patera@pictview.com>:

	* libexif/exif-entry.c: Do not read beyond e->size.

2003-12-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-entry.c: Now that EXIF_FORMAT_SSHORT
	  is in exif-format.h, we do not need to define it any longer.

2003-12-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif: Various improvements by Jan Patera <patera@pictview.com>.

2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: Handle APP13.

2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: Fix APP0-bug. Patch by Jan Patera
	  <patera@pictview.com>.
