@@ -31,7 +31,7 @@ dnl ---------------------------------------------------------------------------
 ALL_LINGUAS="de es fr"
 # EVIL HACKS
 AC_MSG_CHECKING([for po/Makevars requiring evil hack])
-GETTEXT_PACKAGE="${PACKAGE}-${LIBEXIF_CURRENT}"
+GETTEXT_PACKAGE="${PACKAGE}"
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext domain we're using])
 AC_SUBST(GETTEXT_PACKAGE)
 if test -f po/Makevars.template
